Добавляет блок "Цены" для десктопной версии
- Добавляет компонент 'card-price'.

--- a/source/index.html
+++ b/source/index.html
@@ -79,7 +79,8 @@
                 alt="Вилла на скале на фоне гор" />
             </picture>
             <span class="country-card__title">Греция</span>
-            <a class="button button--transparent country-card__button" href="#panel-greece" data-tab="tab-greece">Смотреть подробнее</a>
+            <a class="button button--transparent country-card__button" href="#panel-greece"
+              data-tab="tab-greece">Смотреть подробнее</a>
           </div>
         </div>
         <div class="places-to-visit__link">
@@ -96,7 +97,8 @@
                 alt="Вид на пляж и лазурный берег сверху" />
             </picture>
             <span class="country-card__title">Албания</span>
-            <a class="button button--transparent country-card__button" href="#panel-albania" data-tab="tab-albania">Смотреть подробнее</a>
+            <a class="button button--transparent country-card__button" href="#panel-albania"
+              data-tab="tab-albania">Смотреть подробнее</a>
           </div>
         </div>
         <div class="places-to-visit__link">
@@ -113,7 +115,8 @@
                 alt="Церковь на фоне моря" />
             </picture>
             <span class="country-card__title">Македония</span>
-            <a class="button button--transparent country-card__button" href="#panel-macedonia" data-tab="tab-macedonia">Смотреть подробнее</a>
+            <a class="button button--transparent country-card__button" href="#panel-macedonia"
+              data-tab="tab-macedonia">Смотреть подробнее</a>
           </div>
         </div>
         <div class="places-to-visit__link">
@@ -130,7 +133,8 @@
                 alt="Вид сверху на лазурную реки и лес" />
             </picture>
             <span class="country-card__title">Черногория</span>
-            <a class="button button--transparent country-card__button" href="#panel-montenegro" data-tab="tab-montenegro">Смотреть подробнее</a>
+            <a class="button button--transparent country-card__button" href="#panel-montenegro"
+              data-tab="tab-montenegro">Смотреть подробнее</a>
           </div>
         </div>
         <div class="places-to-visit__link">
@@ -147,7 +151,8 @@
                 alt="Сталактиты в пещере" />
             </picture>
             <span class="country-card__title">Хорватия</span>
-            <a class="button button--transparent country-card__button" href="#panel-croatia" data-tab="tab-croatia">Смотреть подробнее</a>
+            <a class="button button--transparent country-card__button" href="#panel-croatia"
+              data-tab="tab-croatia">Смотреть подробнее</a>
           </div>
         </div>
       </div>
@@ -160,16 +165,20 @@
               id="tab-greece" tabindex="0">
               Греция
             </button>
-            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-albania" id="tab-albania" tabindex="-1">
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-albania" id="tab-albania"
+              tabindex="-1">
               Албания
             </button>
-            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-macedonia" id="tab-macedonia" tabindex="-1">
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-macedonia"
+              id="tab-macedonia" tabindex="-1">
               Македония
             </button>
-            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-montenegro" id="tab-montenegro" tabindex="-1">
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-montenegro"
+              id="tab-montenegro" tabindex="-1">
               Черногория
             </button>
-            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-croatia" id="tab-croatia" tabindex="-1">
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-croatia" id="tab-croatia"
+              tabindex="-1">
               Хорватия
             </button>
           </div>
@@ -265,7 +274,8 @@
             </picture>
           </div>
         </div>
-        <div class="tabs__tabpanel" id="panel-macedonia" role="tabpanel" tabindex="0" aria-labelledby="tab-macedonia" hidden>
+        <div class="tabs__tabpanel" id="panel-macedonia" role="tabpanel" tabindex="0" aria-labelledby="tab-macedonia"
+          hidden>
           <div class="country container country__container">
             <div class="country__content">
               <h3 class="heading country__heading">Македония</h3>
@@ -304,7 +314,8 @@
             </picture>
           </div>
         </div>
-        <div class="tabs__tabpanel" id="panel-montenegro" role="tabpanel" tabindex="0" aria-labelledby="tab-montenegro" hidden>
+        <div class="tabs__tabpanel" id="panel-montenegro" role="tabpanel" tabindex="0" aria-labelledby="tab-montenegro"
+          hidden>
           <div class="country container country__container">
             <div class="country__content">
               <h3 class="heading country__heading">Черногория</h3>
@@ -340,7 +351,8 @@
             </picture>
           </div>
         </div>
-        <div class="tabs__tabpanel" id="panel-croatia" role="tabpanel" tabindex="0" aria-labelledby="tab-croatia" hidden>
+        <div class="tabs__tabpanel" id="panel-croatia" role="tabpanel" tabindex="0" aria-labelledby="tab-croatia"
+          hidden>
           <div class="country container country__container">
             <div class="country__content">
               <h3 class="heading country__heading">Хорватия</h3>
@@ -376,6 +388,99 @@
                 srcset="img/content/countries/country-croatia-desktop@2x.jpg 2x" width="430" height="596"
                 alt="Сталактиты в пещере Бередине" />
             </picture>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="prices container">
+      <div class="prices__wrapper">
+        <div class="prices__info">
+          <h2 class="heading prices__heading">Цены</h2>
+          <p class="paragraph prices__paragraph">Специально для Вас мы разработали 2 пакета цен с разными условиями,
+            отталкиваясь от Ваших
+            потребностей и возможностей. Выберите для себя лучший вариант отпуска и отдохните на все 100%!</p>
+          <p class="prices__contact">Свяжитесь с нами</p>
+          <a class="link-icon link-icon--phone prices__link-icon" href="tel:+749978468446">
+            <svg class="link-icon__svg" width="30" height="30">
+              <use xlink:href="img/sprite.svg#phone"></use>
+            </svg>
+            <span class="link-icon__text">+7 (499) -784-684-46</span>
+          </a>
+        </div>
+        <div class="prices__card-prices">
+          <div class="card-price">
+            <header class="card-price__header">
+              <h3 class="card-price__title">Комплексный</h3>
+              <span class="card-price__price">$1999</span>
+            </header>
+            <p class="card-price__text">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
+            <ul class="card-price__list">
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Разработанный маршрут с гидом группы</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Перелет, трансфер и проживание в отелях</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Завтраки, ужины в отелях и ланчи на природе</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Экскурсии по удивительно красивым местам Европы</span>
+              </li>
+            </ul>
+            <a class="button card-price__button" href="#">Купить тур сейчас</a>
+          </div>
+          <div class="card-price">
+            <header class="card-price__header">
+              <h3 class="card-price__title">Экономный</h3>
+              <span class="card-price__price">$1399</span>
+            </header>
+            <p class="card-price__text">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
+            <ul class="card-price__list">
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Разработанный маршрут с гидом группы</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Перелет и трансфер</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Проживание в хостелах при отелях</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Только завтраки в отелях</span>
+              </li>
+              <li class="card-price__list-item">
+                <svg class="card-price__icon-check" width="22" height="22">
+                  <use xlink:href="img/sprite.svg#icon-check"></use>
+                </svg>
+                <span class="card-price__offer">Экскурсии по удивительно красивым местам Европы</span>
+              </li>
+            </ul>
+            <a class="button card-price__button" href="#">Купить тур сейчас</a>
           </div>
         </div>
       </div>
