--- a/source/index.html
+++ b/source/index.html
@@ -505,7 +505,7 @@
               </label>
 
             </div>
-            <button class="button button--small" type="submit">Отправить</button>
+            <button class="button button--small feedback-form__button" type="submit">Отправить</button>
           </form>
         </div>
       </div>
