--- a/source/index.html
+++ b/source/index.html
@@ -20,13 +20,13 @@
     <nav class="site-navigation main-header__site-navigation">
       <ul class="site-navigation__list">
         <li class="site-navigation__item">
-          <a class="site-navigation__link" href="#">О путешествии</a>
+          <a class="site-navigation__link" href="#places-to-visit">О путешествии</a>
           <svg class="site-navigation__svg" width="25" height="25">
             <use xlink:href="img/sprite.svg#arrow-right"></use>
           </svg>
         </li>
         <li class="site-navigation__item">
-          <a class="site-navigation__link" href="#">Цены</a>
+          <a class="site-navigation__link" href="#prices">Цены</a>
           <svg class="site-navigation__svg" width="25" height="25">
             <use xlink:href="img/sprite.svg#arrow-right"></use>
           </svg>
@@ -60,7 +60,7 @@
         </a>
       </div>
     </section>
-    <section class="places-to-visit container">
+    <section class="places-to-visit container" id="places-to-visit">
       <h2 class="heading places-to-visit__heading">Места посещения</h2>
       <p class="paragraph places-to-visit__paragraph">Вы можете выбрать полный тур или частичный, с посещением первых 3
         мест</p>
@@ -392,7 +392,7 @@
         </div>
       </div>
     </section>
-    <section class="prices container">
+    <section class="prices container" id="prices">
       <div class="prices__wrapper">
         <div class="prices__info">
           <h2 class="heading prices__heading">Цены</h2>
@@ -490,20 +490,18 @@
         <div class="feedback-form section-feedback__feedback-form">
           <h2 class="feedback-form__title">У Вас остались вопросы?</h2>
           <p class="feedback-form__text">Оставьте свой номер или e-mail и мы свяжемся с Вами</p>
-          <form action="https://echo.htmlacademy.ru/courses" method="post" autocomplete="off">
+          <form action="#" method="post" autocomplete="off">
             <div class="feedback-form__inputs">
               <label class="input input--tel input--required">
                 <span class="visually-hidden">Номер телефона</span>
-                <input class="input__field" name="phoneNumber" type="tel" placeholder="Введите 10 цифр номера" required>
+                <input class="input__field" name="phoneNumber" type="tel" minlength="10" maxlength="10" pattern="^[0-9]*$" placeholder="Введите 10 цифр номера" required>
                 <span class="input__validation-text">Данные не верны</span>
               </label>
-
               <label class="input">
                 <span class="visually-hidden">Электронная почта</span>
                 <input class="input__field" name="email" type="email" placeholder="E-mail">
                 <span class="input__validation-text">Данные не верны</span>
               </label>
-
             </div>
             <button class="button button--small feedback-form__button" type="submit">Отправить</button>
           </form>
@@ -562,15 +560,15 @@
       </div>
     </section>
   </footer>
-  <section class="modal modal--show">
+  <section class="modal"> <!-- modal--show -->
     <div class="modal__window modal__window--buy-tour">
       <div class="popup-form modal__popup-form">
         <h2 class="popup-form__title">Купить тур</h2>
-        <form action="#" method="post">
+        <form action="#" method="post" autocomplete="off">
           <div class="popup-form__inputs">
             <label class="input input--tel input--required">
               <span class="visually-hidden">Номер телефона</span>
-              <input class="input__field" name="phoneNumber" type="tel" placeholder="Введите 10 цифр номера" required>
+              <input class="input__field" name="phoneNumber" type="tel" minlength="10" maxlength="10" pattern="^[0-9]*$" placeholder="Введите 10 цифр номера" required>
               <span class="input__validation-text">Данные не верны</span>
             </label>
             <label class="input">
@@ -582,7 +580,7 @@
           <button class="button button--small popup-form__button" type="submit">Отправить</button>
         </form>
       </div>
-      <div class="modal__result modal__result--show">
+      <div class="modal__result"> <!-- modal__result--show -->
         <p class="modal__success-text">Форма успешно отправлена, спасибо! :)</p>
       </div>
       <button class="modal__close" aria-label="Закрыть окно">
