Делает макет пискель перфект
- Убирает скрипт где скролл блокируется при открытии
модальных окон, т.к. это вызывало баг на широком экране.

--- a/source/index.html
+++ b/source/index.html
@@ -403,7 +403,7 @@
           </a>
         </div>
         <div class="prices__card-prices">
-          <div class="card-price">
+          <div class="card-price card-price--complex">
             <header class="card-price__header">
               <h3 class="card-price__title">Комплексный</h3>
               <span class="card-price__price">$1999</span>
